<resources>
    <string name="app_name">awty</string>
    <string name="minutes_between_messages">Minutes Between Messages</string>
    <string name="next_message_in">Next message in: --:--</string>
    <string name="start">Start</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="stop">Stop</string>
    <string name="next_message_in_02d_02d">Next message in: %02d:%02d</string>
</resources>