<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/messageInput"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/minutesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/minutes_between_messages"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/phoneInput"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_message_in"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/minutesInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/startStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@id/timerText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>